# ValChange

./: .git-blame-ignore-revs  README.md  __init__.py  __main__.py  auths.py  config.py  cookies.py  exit.py  launch.py  main.py  options.py  proc.py  pyproject.toml  structs.py  subproc.py  switch.py
ValChange/: __init__.py  __main__.py  auths.py  config.py  cookies.py  debug.py  exit.py  helper.py  launch.py  main.py  options.py  proc.py  product.py  programs.py  storage.py  structs.py  subproc.py  switch.py
ValChange/locale/: __init__.py  folders.py  links.py  main.py  manifest.py  paks.py  riot.py  structs.py
ValChange/ps/: __init__.py  instance.py  programs.py  subproc.py
ValChange/riot/: __init__.py  auth.py  auths.py  cookies.py  options.py  product.py  structs.py
