[project]
name="ValChange"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
dependencies = [
	"ValConfig",
	"pyyaml",
	"psutil",
	"requests",
	"infi.systray"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValChange"
