[project]
name="ValChange"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
dependencies = [
	"ValLib",
	"ValStorage",
	"ValManager@git+https://github.com/ValUtils/ValManager.git",
	"ValImgs@git+https://github.com/ValUtils/ValImgs.git",
	"dataclasses-json",
	"pyyaml",
	"psutil",
	"httpx",
	"infi.systray",
	"pywin32",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValChange"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: version bump"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
	'current_version = "{version}"',
	'version = "{version}"',
]

